# -*- tab-width:8; indent-tabs-mode:true; -*-
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (c)
#   2016 FAU -- Joachim Falk <joachim.falk@fau.de>
#   2020 FAU -- Joachim Falk <joachim.falk@fau.de>
# 
# This library is free software; you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option) any
# later version.
# 
# This library is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this library; if not, write to the Free Software Foundation, Inc.,
# 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

## Process this file with automake to produce Makefile.in

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	CoSupport/boost/graph/graph_traits.hpp \
	CoSupport/boost/graph/properties.hpp \
	CoSupport/boost/graph/undirect_graph.hpp \
	CoSupport/boost/init_namespace.hpp \
	CoSupport/boost/pending/property.hpp \
	CoSupport/boost/program_options/init_namespace.hpp \
	CoSupport/boost/program_options/value_semantic.hpp \
	CoSupport/boost/property_map/compose_property_map.hpp \
	CoSupport/boost/python/init_namespace.hpp \
	CoSupport/boost/python/register_listfacade.hpp \
	CoSupport/boost/python/register_setfacade.hpp \
	CoSupport/boost/python/register_tofrom_python_converter_facade.hpp \
	CoSupport/boost/python/register_tofrom_python_converter_maybevalue.hpp \
	CoSupport/boost/python/register_tofrom_python_converter_stdlist.hpp \
	CoSupport/commondefs.h \
	CoSupport/compatibility-glue/integertypes.h \
	CoSupport/compatibility-glue/nullptr.h \
	CoSupport/cosupport_config.h \
	CoSupport/DataTypes/ArrayFifo.hpp \
	CoSupport/DataTypes/bit_buffer.hpp \
	CoSupport/DataTypes/CheckedVector.hpp \
	CoSupport/DataTypes/container_insert.hpp \
	CoSupport/DataTypes/container_retrieve.hpp \
	CoSupport/DataTypes/Detail/RandomAccessTraversalIterImpl.hpp \
	CoSupport/DataTypes/Detail/RandomAccessTraversalIterTemplate.hpp \
	CoSupport/DataTypes/EMPTY.hpp \
	CoSupport/DataTypes/Facade.hpp \
	CoSupport/DataTypes/Iter/BidirectionalTraversalExampleImpl.hpp \
	CoSupport/DataTypes/Iter/BidirectionalTraversalVIf.hpp \
	CoSupport/DataTypes/Iter/Detail/BidirectionalTraversalBase.hpp \
	CoSupport/DataTypes/Iter/Detail/BidirectionalTraversalVFImpl.hpp \
	CoSupport/DataTypes/Iter/Detail/BidirectionalTraversalVImpl.hpp \
	CoSupport/DataTypes/ListFacade.hpp \
	CoSupport/DataTypes/ListInterface.hpp \
	CoSupport/DataTypes/ListVirtual.hpp \
	CoSupport/DataTypes/MapFacade.hpp \
	CoSupport/DataTypes/MapInterface.hpp \
	CoSupport/DataTypes/MapVirtual.hpp \
	CoSupport/DataTypes/MaybeValueFacade.hpp \
	CoSupport/DataTypes/MaybeValue.hpp \
	CoSupport/DataTypes/MaybeValueInterface.hpp \
	CoSupport/DataTypes/MaybeValueVirtual.hpp \
	CoSupport/DataTypes/NILTYPE.hpp \
	CoSupport/DataTypes/oneof.hpp \
	CoSupport/DataTypes/Projection.hpp \
	CoSupport/DataTypes/SerializeHelper.hpp \
	CoSupport/DataTypes/SetFacade.hpp \
	CoSupport/DataTypes/SetInterface.hpp \
	CoSupport/DataTypes/SetVirtual.hpp \
	CoSupport/DataTypes/ValidWrapper.hpp \
	CoSupport/DataTypes/ValueFacade.hpp \
	CoSupport/DataTypes/ValueInterface.hpp \
	CoSupport/DataTypes/ValueVirtual.hpp \
	CoSupport/DataTypes/Vector.hpp \
	CoSupport/DataTypes/VectorInterface.hpp \
	CoSupport/DataTypes/VectorProjection.hpp \
	CoSupport/endianess.h \
	CoSupport/limits.h \
	CoSupport/sassert.h \
	CoSupport/Type/constpropagate.hpp \
	CoSupport/Type/STLIteratorSelector.hpp \
	CoSupport/Type/STLPointerSelector.hpp \
	CoSupport/Type/STLReferenceSelector.hpp \
	CoSupport/Type/STLReverseIteratorSelector.hpp
