# -*- tab-width:8; indent-tabs-mode:true; -*-
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (c)
#   2016 FAU -- Joachim Falk <joachim.falk@fau.de>
# 
# This library is free software; you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option) any
# later version.
# 
# This library is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this library; if not, write to the Free Software Foundation, Inc.,
# 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

## Process this file with automake to produce Makefile.in

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	CoSupport/Math/export_config.h \
	CoSupport/Math/flog2.hpp \
	CoSupport/Math/Interval.hpp \
	CoSupport/Math/ModuloGroup.hpp \
	CoSupport/Math/modulo.hpp \
	CoSupport/Math/string_hash.hpp \
	CoSupport/Math/Tuple/BinOp.hpp \
	CoSupport/Math/Tuple/PO.hpp \
	CoSupport/Math/Tuple/POVector.hpp \
	CoSupport/Math/Tuple/ScalarConstant.hpp \
	CoSupport/Math/Tuple/UnOp.hpp
