# -*- tab-width:8; indent-tabs-mode:true; -*-
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (c)
#   2016 FAU -- Joachim Falk <joachim.falk@fau.de>
# 
# This library is free software; you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option) any
# later version.
# 
# This library is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License
# along with this library; if not, write to the Free Software Foundation, Inc.,
# 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.

## Process this file with automake to produce Makefile.in

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	CoSupport/Streams/AlternateStream.hpp \
	CoSupport/Streams/ColorStreambuf.hpp \
	CoSupport/Streams/DebugOStream.hpp \
	CoSupport/Streams/DebugStreambuf.hpp \
	CoSupport/Streams/export_config.h \
	CoSupport/Streams/FilterOStream.hpp \
	CoSupport/Streams/FilterStreambuf.hpp \
	CoSupport/Streams/HeaderFooterStreambuf.hpp \
	CoSupport/Streams/HexOutput.hpp \
	CoSupport/Streams/IndentStreambuf.hpp \
	CoSupport/Streams/iterator_dump.hpp \
	CoSupport/Streams/LineNumberStreambuf.hpp \
	CoSupport/Streams/NullStreambuf.hpp \
	CoSupport/Streams/SocketTCPClient.hpp \
	CoSupport/Streams/stl_output_for_list.hpp \
	CoSupport/Streams/stl_output_for_map.hpp \
	CoSupport/Streams/stl_output_for_pair.hpp \
	CoSupport/Streams/stl_output_for_set.hpp \
	CoSupport/Streams/stl_output_for_vector.hpp \
	CoSupport/Streams/TranslationStreambuf.hpp
